--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,3 +215,10 @@ footer {
 #footer-details {
     padding: 20px;
 }
+
+/*--------------------------------------------------Three Reason */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
