--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/* --------------------------------Colors */
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color: #676767;
@@ -26,8 +26,24 @@
     background-color: #525252;
 }
 
-/* ---------------------------------Special paddings/margins/text */
+.row-table {
+    display: table;
+}
 
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/* ----------------------------------------Special paddings/margins/text */
 
 h1,
 h2,
@@ -41,7 +57,7 @@ h4 {
 }
 
 .general-sub {
-    font-family: "Exo" sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
 }
@@ -49,7 +65,6 @@ h4 {
 .inline-block {
     display: inline-block;
 }
-
 
 .row-table {
     display: table;
@@ -62,20 +77,20 @@ h4 {
 }
 
 .section-heading {
-    font-family: "Exo" sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
 }
 
-/* ---------------------------------Heading */
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
 }
 
 .heading {
-    margin-left: 59px;
+    margin-left: 50px;
 }
 
 .logo {
@@ -89,7 +104,6 @@ header {
     -webkit-transition: all .5s ease-in-out;
 }
 
-
 .name {
     font-family: "Exo", sans-serif;
     font-weight: 100;
@@ -98,7 +112,7 @@ header {
     color: #fff;
 }
 
-.tittle {
+.title {
     font-family: "Roboto", sans-serif;
     font-weight: 200;
     font-size: 28px;
@@ -115,13 +129,13 @@ header {
     font-size: 0;
 }
 
-#nav {
-    margin: 0;
-}
-
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
@@ -155,15 +169,14 @@ header {
     letter-spacing: 2px;
 }
 
-
-/* ---------------------------------Hover.css */
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/* ---------------------------------Footer */
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -211,14 +224,17 @@ footer {
     background: #e84610;
 }
 
-
 #footer-details {
     padding: 20px;
 }
 
-/*--------------------------------------------------Three Reason */
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
     color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
